--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
 		<activity android:name="StkLauncherActivity"
 			android:label="@string/app_name"
+                        android:taskAffinity="android.task.StkLauncherActivity"
 			android:enabled="false"	>
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -43,6 +44,7 @@
 
                 <activity android:name="StkLauncherActivity2"
                         android:label="@string/app_name2"
+                        android:taskAffinity="android.task.StkLauncherActivity2"
                         android:enabled="false" >
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
@@ -52,6 +54,7 @@
 
                 <activity android:name="StkLauncherActivity3"
                         android:label="@string/app_name3"
+                        android:taskAffinity="android.task.StkLauncherActivity3"
                         android:enabled="false" >
                         <intent-filter>
                                 <action android:name="android.intent.action.MAIN" />
