--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -88,7 +88,7 @@
         </activity>
         <activity android:name="StkDialogActivity"
             android:configChanges="orientation|locale|screenSize|keyboardHidden"
-            android:theme="@android:style/Theme.Dialog"
+            android:theme="@android:style/Theme.Material.Dialog"
             android:taskAffinity="android.task.stk.StkLauncherActivity">
         </activity>
 
